examples/components/error/error-message-radio.njk
{% from "components/radiobuttons/radiobuttons.njk" import radiobuttons as radiobuttons %}

{{
    radiobuttons({
        "id": "radiogroup-error",
        "groupname": "sagen-omhandler",
        "radiogroupLegend": "Sagen handler om",
        "errorMessage": "Vælg hvad sagen handler om",
        "items": [
            {
                "id": "sagen-omhandler-ulykkesforsikring",
                "value": "ulykkesforsikring",
                "label": "Ulykkesforsikring"
            },
            {
                "id": "sagen-omhandler-erstatningsansvar",
                "value": "erstatningsansvar",
                "label": "Erstatningsansvar"
            },
            {
                "id": "sagen-omhandler-forsikringsselskab",
                "value": "forsikringsselskab",
                "label": "Forsikringsselskab"
            }
        ]
    })
}}